# cspace

./: pyproject.toml
.github/workflows/: build.yml
src/cspace/: robotics.py  tool.py  transformers.py
src/cspace/cspace/: classes.py
src/cspace/robotics/: __init__.py  classes.py  torch.py
src/cspace/tool/: kinematics.py  torchrun.py
src/cspace/torch/: __init__.py  classes.py  ops.py
tests/: conftest.py  test_robotics.py  test_torch_robotics.py  test_transformers_robotics.py
