[project]
name = "cspace"
version = "0.0.0"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
[project.scripts]
"cspace.tool.kinematics" = "cspace.tool.kinematics:main"
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[tool.pytest.ini_options]
log_cli = true
log_cli_level = "info"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
pythonpath = ["src"]
markers = [
  "full",
]
[tool.autoflake]
in-place = true
remove-all-unused-imports = true
ignore-init-module-imports = true
recursive = true
[tool.black]
target-version = ["py310"]
[project.optional-dependencies]
full =[
  "torch",
  "accelerate",
  "transformers",
]
test = [
  "torch",
  "accelerate",
  "transformers",
  "scipy",
  "pytest",
  "transforms3d",
  "black",
  "autoflake",
]
